# libplugin

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
.github/workflows/: default.yml
cmake/: colors.cmake  status.cmake  utils.cmake
cmake/compiler/: common.cmake  compiler.cmake  x86_64.cmake
docs/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  utils.hpp
examples/cpp/hello_world/: CMakeLists.txt  main.cpp
examples/cpp/hello_world/hello/: CMakeLists.txt  hello.cpp  hello.hpp
examples/cpp/hello_world/my_plugin/: CMakeLists.txt  mian.cpp  my_plugin.cpp  my_plugin.hpp
examples/cpp/hello_world/world/: CMakeLists.txt  world.cpp  world.hpp
include/: CMakeLists.txt
include/libplugin/: api.hpp  container.hpp  factory.hpp  library.hpp  logger.hpp  plugin.hpp  plugin_base.hpp  registry.hpp  status.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  utils.hpp
src/core/container/: container.cpp
src/core/factory/: factory.cpp
src/core/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/core/plugin/: plugin.cpp  plugin_base.cpp
src/core/registry/: registry.cpp  registry_base.cpp
src/core/status/: CMakeLists.txt  status.cpp
src/cpp/: CMakeLists.txt
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt  utils.hpp
test/cpp/container/: CMakeLists.txt  mian.cpp
test/cpp/factory/: CMakeLists.txt  main.cpp
test/cpp/factory/hello/: CMakeLists.txt  hello.cpp  hello.hpp
test/cpp/factory/world/: CMakeLists.txt  world.cpp  world.hpp
test/cpp/registry/: CMakeLists.txt  mian.cpp
